--- a/html/Index.html
+++ b/html/Index.html
@@ -24,6 +24,6 @@
       <button onclick="location.href='game.html'">Start Game</button>
       <button onclick="location.href='scoreboard.html'">Scoreboard</button>
     </div>
-    <script src="menu.js"></script>
+    <script src="../js/menu.js"></script>
   </body>
 </html>
