--- a/html/scoreboard.html
+++ b/html/scoreboard.html
@@ -25,7 +25,7 @@
         </tbody>
       </table>
     </div>
-    <script src="scoreboard.js"></script>
+    <script src="../js/scoreboard.js"></script>
     </main>
   </body>
 </html>
