--- a/html/Index.html
+++ b/html/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simon Says - Menu Principal</title>
-    <link rel="stylesheet" href="../css/menu.css" " />
+    <link rel="stylesheet" href="../css/menu.css" />
   </head>
   <body>
     <div class="menu-container">
@@ -20,8 +20,8 @@
           required
         />
       </form>
-      <!-- El enlace actúa como botón de submit -->
-      <button onclick="location.href='game.html'">Start Game</button>
+      <!-- Usar un botón con un id para capturar el evento -->
+      <button id="startGameLink">Start Game</button>
       <button onclick="location.href='scoreboard.html'">Scoreboard</button>
     </div>
     <script src="../js/menu.js"></script>
