--- a/html/scoreboard.html
+++ b/html/scoreboard.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Simon Says - Puntajes</title>
+  <title>Scoreboard</title>
   <link rel="stylesheet" href="../css/scoreboard.css">
 </head>
 <body>
   <div class="scoreboard-container">
-    <h1>Tabla de Puntajes</h1>
+    <h1>Scoreboard</h1>
     <table>
       <thead>
         <tr>
-          <th>Jugador</th>
-          <th>Mejor Puntaje</th>
+          <th>Player</th>
+          <th>Score</th>
         </tr>
       </thead>
       <tbody id="scoreTable">
         <!-- Se llenará dinámicamente mediante JavaScript -->
       </tbody>
     </table>
-    <a href="index.html" class="link">Volver al Menú Principal</a>
+    <a href="index.html" class="link">Main Menu</a>
   </div>
   <script src="../js/scoreboard.js"></script>
 </body>
