changes to the main menu ui

--- a/html/Index.html
+++ b/html/Index.html
@@ -12,9 +12,9 @@
         <h1>Simon Says</h1>
       </header>
       
-      <!-- Input centered -->
+      <!-- Input centardo -->
       <form id="start-form" onsubmit="return false;">
-        <input type="text" id="playerName" placeholder="Enter your name"  />
+        <input type="text" id="playerName" placeholder="Enter your name" required />
       </form>
   
       <!-- Group the buttons -->
