--- a/html/scoreboard.html
+++ b/html/scoreboard.html
@@ -17,7 +17,7 @@
         </tr>
       </thead>
       <tbody id="scoreTable">
-        <!-- Se llenará dinámicamente mediante JavaScript -->
+        <!-- Se llenara dinámicamente mediante JavaScript -->
       </tbody>
     </table>
     <a href="index.html" class="link">Main Menu</a>
