--- a/html/game.html
+++ b/html/game.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simon Says - Game</title>
-    <link rel="stylesheet" href="../css/game.css">
+    <link rel="stylesheet" href="../css/game.css" />
   </head>
   <body>
     <div class="game-container">
@@ -13,6 +13,7 @@
         <p>Jugador: <span id="displayPlayerName"></span></p>
         <p>Ronda: <span id="round">0</span></p>
         <p>Puntaje: <span id="score">0</span></p>
+        <div id="message" class="message"></div>
       </header>
       <div id="game-board">
         <!-- Botones de colores en forma de cuadrado -->
