kinda fixed button images and other css

--- a/html/Index.html
+++ b/html/Index.html
@@ -11,19 +11,23 @@
       <header>
         <h1>Simon Says</h1>
       </header>
-      
+
       <!-- Input centardo -->
       <form id="start-form" onsubmit="return false;">
-        <input type="text" id="playerName" placeholder="Enter your name" required />
+        <input
+          type="text"
+          id="playerName"
+          placeholder="Enter your name"
+          required
+        />
       </form>
-  
+
       <!-- Group the buttons -->
       <div class="button-group">
-        <button id="startGameLink">Start Game</button>
-        <button onclick="location.href='scoreboard.html'">Scoreboard</button>
+        <button id="startGameLink" class="start-btn"><span>Start Game</span></button>
+        <button class="score-btn" onclick="location.href='scoreboard.html'"><span>Scoreboard</span></button>
       </div>
-    </div>
-  
+
     <!-- Name required modal -->
     <div id="nameModal" class="modal hidden">
       <div class="modal-content">
@@ -31,7 +35,7 @@
         <button id="closeModal">Close</button>
       </div>
     </div>
-  
+
     <script src="../js/menu.js"></script>
   </body>
-  </html>
+</html>
