--- a/html/game.html
+++ b/html/game.html
@@ -10,9 +10,9 @@
     <div class="game-container">
       <header>
         <h1>Simon Says</h1>
-        <p>Jugador: <span id="displayPlayerName"></span></p>
-        <p>Ronda: <span id="round">0</span></p>
-        <p>Puntaje: <span id="score">0</span></p>
+        <p>Player: <span id="displayPlayerName"></span></p>
+        <p>Round: <span id="round">0</span></p>
+        <p>Score: <span id="score">0</span></p>
         <div id="message" class="message"></div>
       </header>
       <div id="game-board">
