--- a/html/Index.html
+++ b/html/Index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="menu-container">
       <header>
-        <h1>Simon Says</h1>
+        <h1>SIMON-SAYS</h1>
       </header>
 
       <!-- Input centardo -->
@@ -19,6 +19,7 @@
           id="playerName"
           placeholder="Enter your name"
           required
+          autocomplete="off"
         />
       </form>
 
