--- a/html/scoreboard.html
+++ b/html/scoreboard.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scoreboard</title>
-  <link rel="stylesheet" href="../css/scoreboard.css">
-</head>
-<body>
-  <div class="scoreboard-container">
-    <h1>Scoreboard</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Player</th>
-          <th>Score</th>
-        </tr>
-      </thead>
-      <tbody id="scoreTable">
-        <!-- Se llenara dinámicamente mediante JavaScript -->
-      </tbody>
-    </table>
-    <a href="index.html" class="link">Main Menu</a>
-  </div>
-  <script src="../js/scoreboard.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Scoreboard</title>
+    <link rel="stylesheet" href="../css/scoreboard.css" />
+  </head>
+  <body>
+    <div class="scoreboard-container">
+      <h1>Scoreboard</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>Player</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody id="scoreTable">
+          <!-- Se llenara dinámicamente mediante js -->
+        </tbody>
+      </table>
+      <a href="index.html" class="main-menu-link"><span>Main Menu</span></a>
+    </div>
+    <script src="../js/scoreboard.js"></script>
+  </body>
 </html>
