--- a/html/game.html
+++ b/html/game.html
@@ -9,12 +9,16 @@
   <body>
     <div class="game-container">
       <header>
-        <h1>Simon Says</h1>
-        <p>Player: <span id="displayPlayerName"></span></p>
-        <p>Round: <span id="round">0</span></p>
-        <p>Score: <span id="score">0</span></p>
+        <div class="info-box">
+          <p>Player: <span id="displayPlayerName"></span></p>
+          <div class="score-info">
+            <p>Round: <span id="round">0</span></p>
+            <p>Score: <span id="score">0</span></p>
+          </div>
+        </div>
         <div id="message" class="message"></div>
       </header>
+
       <div id="game-board">
         <!-- Botones de colores en forma de cuadrado -->
         <button class="color-btn" id="red"></button>
@@ -22,9 +26,10 @@
         <button class="color-btn" id="blue"></button>
         <button class="color-btn" id="yellow"></button>
       </div>
+
       <div class="controls">
         <button id="restart" class="hidden">Restart Game</button>
-        <a href="index.html">Main Menu</a>
+        <a href="index.html" class="main-menu-link"><span>Main Menu</span></a>
       </div>
     </div>
 
@@ -32,8 +37,8 @@
     <div id="gameOverModal" class="modal hidden">
       <div class="modal-content">
         <h2>Game Over</h2>
-        <button id="restartButton">Restart Game</button>
-        <button id="mainMenuButton">Main Menu</button>
+        <button id="restartButton"><span>Restart</span></button>
+        <button id="mainMenuButton"><span>Main Menu</span></button>
       </div>
     </div>
 
