--- a/html/scoreboard.html
+++ b/html/scoreboard.html
@@ -20,7 +20,7 @@
           <!-- Se llenara dinámicamente mediante js -->
         </tbody>
       </table>
-      <a href="index.html" class="main-menu-link"><span>Main Menu</span></a>
+      <a href="../index.html" class="main-menu-link"><span>Main Menu</span></a>
     </div>
     <script src="../js/scoreboard.js"></script>
   </body>
