--- a/html/game.html
+++ b/html/game.html
@@ -29,9 +29,7 @@
 
       <div class="controls">
         <button id="restart" class="hidden">Restart Game</button>
-        <a href="../index.html" class="main-menu-link"
-          ><span>Main Menu</span></a
-        >
+        <a href="index.html" class="main-menu-link"><span>Main Menu</span></a>
       </div>
     </div>
 
