--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
       <!-- Group the buttons -->
       <div class="button-group">
         <button id="startGameLink" class="start-btn"><span>Start Game</span></button>
-        <button class="score-btn" onclick="location.href='html/scoreboard.html'"><span>Scoreboard</span></button>
+        <button class="score-btn" onclick="location.href='scoreboard.html'"><span>Scoreboard</span></button>
       </div>
 
     <!-- Name required modal -->
