--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simon Says - Menu Principal</title>
-    <link rel="stylesheet" href="../css/menu.css" />
+    <link rel="stylesheet" href="./css/menu.css" />
   </head>
   <body>
     <div class="menu-container">
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <script src="../js/menu.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
 
