--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simon Says - Game</title>
-    <link rel="stylesheet" href="../css/game.css" />
+    <link rel="stylesheet" href="./css/game.css" />
   </head>
   <body>
     <div class="game-container">
@@ -42,6 +42,6 @@
       </div>
     </div>
 
-    <script src="../js/game.js"></script>
+    <script src="./js/game.js"></script>
   </body>
 </html>
