--- a/scoreboard.html
+++ b/scoreboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Scoreboard</title>
-    <link rel="stylesheet" href="../css/scoreboard.css" />
+    <link rel="stylesheet" href="./css/scoreboard.css" />
   </head>
   <body>
     <div class="scoreboard-container">
@@ -22,6 +22,6 @@
       </table>
       <a href="index.html" class="main-menu-link"><span>Main Menu</span></a>
     </div>
-    <script src="../js/scoreboard.js"></script>
+    <script src="./js/scoreboard.js"></script>
   </body>
 </html>
