--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Simon Says - Menu Principal</title>
+    <title>Simon Says</title>
     <link rel="stylesheet" href="./css/menu.css" />
   </head>
   <body>
@@ -41,4 +41,4 @@
   </body>
 </html>
 
-      <!-- nada -->
+      
